--- a/ci_build/azure_pipelines/pretrained_model_test-matrix.yml
+++ b/ci_build/azure_pipelines/pretrained_model_test-matrix.yml
@@ -8,7 +8,7 @@ jobs:
     python_versions: ['3.7'] # Max version that supports tf 1.15
     tf_versions: ['1.15.5']
     onnx_versions: ['1.14.1'] # Max version that supports python 3.7
-    onnx_opsets: ['18', '17', '16', '15']
+    onnx_opsets: ['18', '17', '16', '15', '14']
     onnx_backends: {onnxruntime: ['1.14.1']} # Max version that supports python 3.7
     job:
       steps:
@@ -16,27 +16,7 @@ jobs:
 
 - template: 'templates/job_generator.yml'
   parameters:
-    platforms: ['windows']
-    python_versions: ['3.8']
-    tf_versions: ['2.9.0']
-    onnx_opsets: ['18', '17', '16', '15']
-    job:
-      steps:
-      - template: 'pretrained_model_test.yml'
-
-- template: 'templates/job_generator.yml'
-  parameters:
-    platforms: ['windows']
-    python_versions: ['3.9']
-    tf_versions: ['2.13.0']
-    onnx_opsets: ['18', '17', '16', '15']
-    job:
-      steps:
-      - template: 'pretrained_model_test.yml'
-
-- template: 'templates/job_generator.yml'
-  parameters:
-    platforms: ['linux', 'windows']
+    platforms: ['linux']
     python_versions: ['3.7'] # Max version that supports tf 1.15
     tf_versions: ['1.15.5']
     onnx_versions: ['1.14.1'] # Max version that supports python 3.7
@@ -48,7 +28,17 @@ jobs:
 
 - template: 'templates/job_generator.yml'
   parameters:
-    platforms: ['linux', 'windows']
+    platforms: ['windows']
+    python_versions: ['3.9']
+    tf_versions: ['2.9.0', '2.15.0']
+    onnx_opsets: ['18', '17', '16', '15', '14']
+    job:
+      steps:
+      - template: 'pretrained_model_test.yml'
+
+- template: 'templates/job_generator.yml'
+  parameters:
+    platforms: ['linux']
     python_versions: ['3.8']
     tf_versions: ['2.9.0']
     onnx_opsets: ['17', '16', '14']
@@ -58,9 +48,9 @@ jobs:
 
 - template: 'templates/job_generator.yml'
   parameters:
-    platforms: ['linux', 'windows']
-    python_versions: ['3.9']
-    tf_versions: ['2.13.0']
+    platforms: ['linux']
+    python_versions: ['3.10']
+    tf_versions: ['2.15.0']
     onnx_opsets: ['17', '16', '14']
     job:
       steps:
@@ -69,7 +59,7 @@ jobs:
 - template: 'templates/job_generator.yml'
   parameters:
     platforms: ['linux', 'windows']
-    python_versions: ['3.10']
+    python_versions: ['3.8']
     tf_versions: ['2.10.0']
     job:
       steps:
@@ -86,10 +76,9 @@ jobs:
 
 - template: 'templates/job_generator.yml'
   parameters:
-    platforms: ['linux']
+    platforms: ['linux', 'windows']
     python_versions: ['3.10']
-    tf_versions: ['2.9.0', '2.13.0']
-    onnx_opsets: ['17', '16', '14']
+    tf_versions: ['2.14.0']
     job:
       steps:
       - template: 'pretrained_model_test.yml'
