--- a/ci_build/azure_pipelines/trimmed_keras2onnx_application_tests.yml
+++ b/ci_build/azure_pipelines/trimmed_keras2onnx_application_tests.yml
@@ -19,7 +19,7 @@ jobs:
         INSTALL_TRANSFORMERS:
         INSTALL_NUMPY: pip install numpy==1.19.0
         INSTALL_LEGACY: pip install h5py==2.9.0
-        NIGHTLY_BUILD_TEST: python run_all.py --exclude "test_keras_applications_v2.py"
+        NIGHTLY_BUILD_TEST: python run_all_v2.py --exclude "test_keras_applications_v2.py"
 
       Python38-tf2-oldest:
         python.version: '3.8'
@@ -33,36 +33,36 @@ jobs:
         INSTALL_NUMPY:
         NIGHTLY_BUILD_TEST: python run_all_v2.py
 
-      Python38-tf2-latest:
+      Python310-tf2-latest:
         python.version: '3.8'
         ONNX_PATH: onnx==1.15.0
         INSTALL_KERAS:
         UNINSTALL_KERAS:
-        INSTALL_TENSORFLOW: pip install tensorflow==2.13.0
+        INSTALL_TENSORFLOW: pip install tensorflow==2.15.0
         INSTALL_ORT: pip install onnxruntime==1.16.3
         INSTALL_KERAS_RESNET: pip install keras-resnet
         INSTALL_TRANSFORMERS: pip install transformers==4.2.0
         INSTALL_NUMPY:
         NIGHTLY_BUILD_TEST: python run_all_v2.py
 
-      Python310-tf2-oldest:
-        python.version: '3.10'
+      Python38-tf2-oldest-plus-1:
+        python.version: '3.8'
         ONNX_PATH: onnx==1.15.0
         INSTALL_KERAS:
         UNINSTALL_KERAS:
-        INSTALL_TENSORFLOW: pip install tensorflow==2.9.0
+        INSTALL_TENSORFLOW: pip install tensorflow==2.10.0
         INSTALL_ORT: pip install onnxruntime==1.16.3
         INSTALL_KERAS_RESNET: pip install keras-resnet
         INSTALL_TRANSFORMERS: pip install transformers==4.2.0
         INSTALL_NUMPY:
         NIGHTLY_BUILD_TEST: python run_all_v2.py
 
-      Python310-tf2-latest:
-        python.version: '3.10'
+      Python39-tf2-latest-minus-1:
+        python.version: '3.9'
         ONNX_PATH: onnx==1.15.0
         INSTALL_KERAS:
         UNINSTALL_KERAS:
-        INSTALL_TENSORFLOW: pip install tensorflow==2.13.0
+        INSTALL_TENSORFLOW: pip install tensorflow==2.14.0
         INSTALL_ORT: pip install onnxruntime==1.16.3
         INSTALL_KERAS_RESNET: pip install keras-resnet
         INSTALL_TRANSFORMERS: pip install transformers==4.2.0
