--- a/ci_build/azure_pipelines/templates/combine_test_coverage.yml
+++ b/ci_build/azure_pipelines/templates/combine_test_coverage.yml
@@ -20,13 +20,18 @@ stages:
         artifactName: '${{ parameters.artifact_name }}'
         downloadPath: $(System.DefaultWorkingDirectory)
   
-    - task: CondaEnvironment@1
-      inputs:
-        createCustomEnvironment: 'true'
-        environmentName: 'tf2onnx'
-        packageSpecs: 'python=3.7'
-        updateConda: 'false'
+    # - task: CondaEnvironment@1
+    #   inputs:
+    #     createCustomEnvironment: 'true'
+    #     environmentName: 'tf2onnx'
+    #     packageSpecs: 'python=3.7'
+    #     updateConda: 'false'
   
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.7'
+        architecture: 'x64'
+
     - bash: |
         pip install -U coverage
       condition: succeeded()
