--- a/ci_build/azure_pipelines/templates/keras2onnx_application_tests.yml
+++ b/ci_build/azure_pipelines/templates/keras2onnx_application_tests.yml
@@ -9,11 +9,16 @@ steps:
   - script: sudo install -d -m 0777 /home/vsts/.conda/envs
     displayName: Fix Conda permissions
 
-  - task: CondaEnvironment@1
+  # - task: CondaEnvironment@1
+  #   inputs:
+  #     createCustomEnvironment: true
+  #     environmentName: 'py$(python.version)'
+  #     packageSpecs: 'python=$(python.version)'
+
+  - task: UsePythonVersion@0
     inputs:
-      createCustomEnvironment: true
-      environmentName: 'py$(python.version)'
-      packageSpecs: 'python=$(python.version)'
+      versionSpec: '$(python.version)'
+      architecture: 'x64'
 
   - script: |
       python -m pip install --upgrade pip
