--- a/ci_build/azure_pipelines/templates/setup.yml
+++ b/ci_build/azure_pipelines/templates/setup.yml
@@ -30,7 +30,7 @@ steps:
     pip uninstall -y tensorflow
     pip install $(CI_PIP_TF_NAME)
     pip uninstall -y protobuf
-    pip install "protobuf~=3.20"
+    pip install "protobuf<6.0.0"
 
     python setup.py install
 
