--- a/ci_build/azure_pipelines/templates/keras2onnx_application_tests.yml
+++ b/ci_build/azure_pipelines/templates/keras2onnx_application_tests.yml
@@ -20,7 +20,7 @@ steps:
       pip install onnxconverter-common
       pip install $(ONNX_PATH)
       pip uninstall -y protobuf
-      pip install "protobuf~=3.20"
+      pip install "protobuf<6.0.0"
       pip install h5py==3.7.0
       pip install parameterized
       pip install timeout-decorator
@@ -85,7 +85,7 @@ steps:
       pip install onnxconverter-common
       pip install %ONNX_PATH%
       pip uninstall -y protobuf
-      pip install "protobuf~=3.20"
+      pip install "protobuf<6.0.0"
       pip install h5py==3.7.0
       pip install parameterized
       pip install timeout-decorator
