--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Call the composite action defined in my-action.yml
-      - uses: ./.github/workflows/setup
+      - uses: ./.github/workflows/setup-common
