--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/checkout@v4
 
       # Call the composite action defined in my-action.yml
-      - uses: ./.github/workflows/setup
+      - uses: ./.github/workflows/pylint.yml
