--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          path: migrate_ci
 
       # Call the composite action defined in my-action.yml
-      - uses: ./.github/workflows/setup.yml@migrate_ci
+      - uses: ./.github/workflows/setup.yml
