Correct the branch name.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          path: migrate_ci
+          ref: migrate_ci
 
       # Call the composite action defined in my-action.yml
       - uses: ./.github/workflows/setup.yml
