--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          repository: fatcat-z/tensorflow-onnx
           ref: migrate_ci
 
       # Call the composite action defined in my-action.yml
