--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,9 @@ jobs:
         run: ls ./.github/workflows/
 
       # Call the composite action defined in my-action.yml
-      - uses: ./.github/workflows/setup.yml
+      - name: Run my action
+        uses: ./.github/workflows/setup-common
+
+      # Call the composite action defined in my-action.yml
+      - name: Run my action yml
+        uses: ./.github/workflows/setup.yml
