--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
   workflow_call:
+    inputs:
+      tf_version:
+        description: 'TensorFlow version'
+        required: true
+        default: '2.14.0'
+        type: string
 
 jobs:
   setup:
@@ -21,11 +27,11 @@ jobs:
           pip install pytest pytest-cov pytest-runner coverage graphviz requests pyyaml pillow pandas parameterized sympy coloredlogs flatbuffers timeout-decorator
           pip install numpy
 
-
           pip install onnxruntime-extensions
-          pip install "tensorflow-text<=$(env.CI_TF_VERSION)"
+          pip install "tensorflow-text<=${{ inputs.tf_version }}"
 
           pip uninstall -y tensorflow
+          pip install tensorflow==${{ inputs.tf_version }}
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
 
