Correct the output name.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
     needs: prepare-variables-job
     uses: ./.github/workflows/setup.yml
     with:
-      tf_version: ${{ needs.prepare-variables-job.outputs.tensorflow_version }}
+      tf_version: ${{ needs.prepare-variables.outputs.tensorflow_version }}
