Correct the output name.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - id: prepare-variables
         name: Prepare Variables
         run: |
-          echo "tf_version=2.10.0" >> $GITHUB_ENV
+          echo "tf_version=2.10.0" >> $GITHUB_OUTPUT
 
   call-setup-yml:
     needs: prepare-variables-job
