--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
       - id: prepare-variables
         name: Prepare Variables
         run: |
-          echo "tf_version=2.10.0" >> $GITHUB_OUTPUT
+          # echo "tf_version=2.10.0" >> $GITHUB_OUTPUT
+          echo "##[set-output name=tf_version;]2.10.0"
 
   call-setup-yml:
     needs: prepare-variables-job
