Update the path of setup.py.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -35,7 +35,7 @@ jobs:
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
 
-          python setup.py install
+          python ./setup.py install
 
           pip freeze --all
 
