Check more folders.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -35,7 +35,8 @@ jobs:
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
 
-          ls
+          ls /home/runner/work/tensorflow-onnx/tensorflow-onnx/
+          ls /home/runner/work/tensorflow-onnx/
           python setup.py install
 
           pip freeze --all
