--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,25 @@ on:
 
 jobs:
   prepare-variables-job:
+    strategy:
+      matrix:
+        tf_version: ['2.10.0', '2.11.0', '2.13.0']
+        python_version: ['3.8', '3.9', '3.10']
     runs-on: ubuntu-latest
     outputs:
       tensorflow_version: ${{ steps.prepare-variables.outputs.tf_version }}
+      python_version: ${{ steps.prepare-variables.outputs.py_version }}
 
     steps:
-      # - name: Checkout code
-      #   uses: actions/checkout@v4
-
-      - name: Check folder
-        run: ls ./
-
       - id: prepare-variables
         name: Prepare Variables
         run: |
-          echo "tf_version=2.10.0" >> $GITHUB_OUTPUT
+          echo "tf_version=${{ matrix.tf_version }}" >> $GITHUB_OUTPUT
+          echo "py_version=${{ matrix.python_version }}" >> $GITHUB_OUTPUT
 
   call-setup-yml:
     needs: prepare-variables-job
     uses: ./.github/workflows/setup.yml
     with:
       tf_version: ${{ needs.prepare-variables-job.outputs.tensorflow_version }}
+      py_version: ${{ needs.prepare-variables-job.outputs.python_version }}
