--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -20,8 +20,10 @@ jobs:
   setup:
     strategy:
       matrix:
-        tf_version: ['2.10.0', '2.11.0', '2.13.0']
-        python_version: ['3.8', '3.9', '3.10']
+        # tf_version: ['2.10.0', '2.11.0', '2.13.0']
+        # python_version: ['3.8', '3.9', '3.10']
+        tf_version: ['2.10.0']
+        python_version: ['3.8']
     permissions:
       actions: write
       checks: write
