--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  # pull_request:
+  pull_request:
   workflow_call:
     inputs:
       tf_version:
@@ -20,10 +20,8 @@ jobs:
   setup:
     strategy:
       matrix:
-        # tf_version: ['2.10.0', '2.11.0', '2.13.0']
-        # python_version: ['3.8', '3.9', '3.10']
-        tf_version: ['2.10.0']
-        python_version: ['3.8']
+        tf_version: ['2.10.0', '2.11.0', '2.13.0']
+        python_version: ['3.8', '3.9', '3.10']
     permissions:
       actions: write
       checks: write
@@ -35,9 +33,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           # python-version: ${{ inputs.py_version }}
-          python-version: ${{ matrix.py_version }}
+          python-version: ${{ matrix.python_version }}
 
-      - name: Checkout code (${{ matrix.py_version }}-${{ matrix.tf_version }})
+      - name: Checkout code (${{ matrix.python_version }}-${{ matrix.tf_version }})
         uses: actions/checkout@v4
 
       - name: Install dependencies
@@ -55,9 +53,6 @@ jobs:
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
 
-          ls /home/runner/work/tensorflow-onnx/tensorflow-onnx/
-          ls /home/runner/work/tensorflow-onnx/
-          cd /home/runner/work/tensorflow-onnx/tensorflow-onnx/
           python setup.py install
 
           pip freeze --all
