--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -36,6 +36,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check folder
+        run: |
+          ls ./.github/workflows/
+
       - name: Install dependencies (tf ${{ matrix.tf_version }})
         uses: ./.github/workflows/preparation.yml
         with:
