Specify the yml file name.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -41,7 +41,7 @@ jobs:
           ls ./.github/workflows/
 
       - name: Install dependencies (tf ${{ matrix.tf_version }})
-        uses: ./.github/actions/prepare_env
+        uses: ./.github/actions/prepare_env/action.yml
         with:
           tf_version: ${{ matrix.tf_version }}
         # run: |
