Try github variable.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -23,7 +23,8 @@ jobs:
         tf_version: ['2.10', '2.13']
         python_version: ['3.8', '3.9']
         opset_version: ['17']
-
+    env:
+      tensorflow_version: ${{ github.event.inputs.tf_version }}
     runs-on: ubuntu-latest
 
     steps:
@@ -41,7 +42,7 @@ jobs:
           ls ./.github/workflows/
 
       - name: Install dependencies (tf ${{ matrix.tf_version }})
-        uses: ./.github/actions/prepare_env/action.yml
+        uses: ./.github/actions/prepare_env/
         with:
           tf_version: ${{ matrix.tf_version }}
         # run: |
