--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -41,8 +41,9 @@ jobs:
           ls ./tests/
 
       - name: Install dependencies (tf ${{ matrix.tf_version }})
+        shell: bash
         run: |
-          python ./tests/setup_test_env.sh ${{ matrix.tf_version }}
+          ./tests/setup_test_env.sh ${{ matrix.tf_version }}
         #   pip install pytest pytest-cov pytest-runner coverage graphviz requests pyyaml pillow pandas parameterized sympy coloredlogs flatbuffers timeout-decorator
         #   pip install onnx
         #   pip install onnxruntime==1.16.3
