--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           set -x
           status=0
+          pip list
           # TODO: fix unity model path
           # python tests/run_pretrained_models.py --backend $CI_ONNX_BACKEND --opset $CI_ONNX_OPSET --config tests/unity.yaml || status=$?
           python tests/run_pretrained_models.py --backend onnxruntime --opset ${{ matrix.opset_version }} --skip_tf_tests False --skip_tflite_tests False --skip_tfjs_tests True --config tests/run_pretrained_models.yaml || status=$?
