--- a/.github/workflows/pretrained_model_tests_core.yml
+++ b/.github/workflows/pretrained_model_tests_core.yml
@@ -1,28 +1,18 @@
-name: setup-common
+name: Pretrained Model Test (Core)
 
 on:
   push:
     branches:
       - main
   pull_request:
-  workflow_call:
-    inputs:
-      tf_version:
-        description: 'TensorFlow version'
-        required: true
-        type: string
-      py_version:
-        description: 'Python version'
-        required: true
-        type: string
 
 jobs:
   setup:
     strategy:
       matrix:
         tf_version: ['2.10', '2.13']
-        python_version: ['3.8', '3.9']
-        opset_version: ['17']
+        python_version: ['3.8', '3.10']
+        opset_version: ['17', '16', '14']
 
     runs-on: ubuntu-latest
 
@@ -30,7 +20,6 @@ jobs:
       - name: Set up Python (${{ matrix.python_version }})
         uses: actions/setup-python@v5
         with:
-          # python-version: ${{ inputs.py_version }}
           python-version: ${{ matrix.python_version }}
 
       - name: Checkout code (${{ github.event.inputs.tf_version }})
@@ -45,22 +34,6 @@ jobs:
         run: |
           chmod +x ./tests/setup_test_env.sh
           ./tests/setup_test_env.sh ${{ matrix.tf_version }}
-        #   pip install pytest pytest-cov pytest-runner coverage graphviz requests pyyaml pillow pandas parameterized sympy coloredlogs flatbuffers timeout-decorator
-        #   pip install onnx
-        #   pip install onnxruntime==1.16.3
-        #   pip install numpy
-
-        #   pip install onnxruntime-extensions
-        #   pip install "tensorflow-text<=${{ matrix.tf_version }}"
-
-        #   pip uninstall -y tensorflow
-        #   pip install tensorflow==${{ matrix.tf_version }}
-        #   pip uninstall -y protobuf
-        #   pip install "protobuf~=3.20"
-
-        #   python setup.py install
-
-        #   pip freeze --all
 
       - name: Fix Paths (Windows only)
         if: runner.os == 'Windows'
