--- a/.github/workflows/unit_tests_core.yml
+++ b/.github/workflows/unit_tests_core.yml
@@ -7,10 +7,10 @@ on:
       - main
 
 jobs:
-  setup:
+  run_tests:
     strategy:
       matrix:
-        tf_version: ['2.9.0', '2.15.0']
+        tf_version: ['2.9.0', '2.13.0']
         python_version: ['3.8', '3.9', '3.10']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
