Add keras_application_tests core.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/pretrained_model_tests_core.yml
+++ b/.github/workflows/pretrained_model_tests_core.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         run: |
           chmod +x ./tests/setup_test_env.sh
-          ./tests/setup_test_env.sh ${{ matrix.tf_version }} ${{ matrix.ort_version }}
+          ./tests/utils/setup_test_env.sh ${{ matrix.tf_version }} ${{ matrix.ort_version }}
 
       - name: Fix Paths (Windows only)
         if: runner.os == 'Windows'
