--- a/.github/workflows/pretrained_model_tests_core.yml
+++ b/.github/workflows/pretrained_model_tests_core.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies (tf v${{ matrix.tf_version }})
         shell: bash
         run: |
-          chmod +x ./tests/setup_test_env.sh
+          chmod +x ./tests/utils/setup_test_env.sh
           ./tests/utils/setup_test_env.sh ${{ matrix.tf_version }} ${{ matrix.ort_version }}
 
       - name: Fix Paths (Windows only)
