Add keras unit tests.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,10 +1,12 @@
 name: Pylint Workflow
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   pylint:
