--- a/.github/workflows/keras_unit_test_core.yml
+++ b/.github/workflows/keras_unit_test_core.yml
@@ -1,4 +1,4 @@
-name: Keras2onnx Application Tests (Core)
+name: Keras2onnx Unit Tests (Core)
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         tf_version: ['2.9.0', '2.13.0']
-        python_version: ['3.8', '3.9']
+        python_version: ['3.8', '3.9', '3.10']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.15.0']
@@ -33,7 +33,6 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          # conda config --set always_yes yes --set changeps1 no
           pip install onnxconverter-common
           pip install onnx==${{ matrix.onnx_version }}
           pip uninstall -y protobuf
@@ -43,37 +42,20 @@ jobs:
           pip install timeout-decorator
           pip install coloredlogs flatbuffers
           pip install tensorflow==${{ matrix.tf_version }}
-          pip install onnxruntime==${{ matrix.ort_version }}
-          pip install Pillow==8.2.0
-          pip install opencv-python
-          pip install tqdm
-          pip install keras-segmentation==0.2.0
-          git clone https://github.com/matterport/Mask_RCNN
-          cd Mask_RCNN
           pip install -r requirements.txt
-          python setup.py install
-          cd ..
-          pip install matplotlib
-          git clone https://github.com/qqwweee/keras-yolo3
-          pip install keras-resnet
-          pip install git+https://www.github.com/keras-team/keras-contrib.git
-          pip install keras-tcn==2.8.3
-          pip install git+https://github.com/qubvel/efficientnet
-          pip install transformers==4.2.0
-          pip install keras-self-attention
+          pip install -r requirements-dev.txt
           pip install pytest pytest-cov pytest-runner
+          pip install onnxruntime==${{ matrix.ort_version }}
 
           echo "----- List all of depdencies:"
           pip freeze --all
 
-      - name: Run keras application tests
+      - name: Run keras unit tests
         run: |
           set -x
           status=0
-          pip install -e .
           python -c "import onnxruntime"
+          python -c "import onnxconverter_common"
           pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
-          cd tests/keras2onnx_applications/nightly_build
-          python run_all_v2.py
           exit $status
 
