Install tf2onnx.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/workflows/keras_unit_test_core.yml
+++ b/.github/workflows/keras_unit_test_core.yml
@@ -44,6 +44,7 @@ jobs:
           pip install onnxruntime==${{ matrix.ort_version }}
           pip uninstall -y protobuf
           pip install "protobuf~=3.20"
+          pip install -e .
 
           echo "----- List all of depdencies:"
           pip freeze --all
