--- a/.github/workflows/unit_tests_core.yml
+++ b/.github/workflows/unit_tests_core.yml
@@ -43,7 +43,8 @@ jobs:
           $base_dir = python -c "import site; print(site.getsitepackages()[0])"
           echo "##vso[task.prependpath]$base_dir/Library/bin"
 
-      - name: Run unit_test
+      - name: Run unit_test (Linux)
+        if: runner.os == 'Linux'
         run: |
           export TF2ONNX_TEST_BACKEND=onnxruntime
           export TF2ONNX_TEST_OPSET=${{ matrix.opset_version }}
@@ -52,3 +53,12 @@ jobs:
           export TF2ONNX_SKIP_TF_TESTS=False
           python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append
 
+      - name: Run unit_test (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          %TF2ONNX_TEST_BACKEND%=onnxruntime
+          %TF2ONNX_TEST_OPSET%=${{ matrix.opset_version }}
+          %TF2ONNX_SKIP_TFLITE_TESTS%=False
+          %TF2ONNX_SKIP_TFJS_TESTS%=True
+          %TF2ONNX_SKIP_TF_TESTS%=False
+          python -m pytest --cov=tf2onnx --cov-report=term --disable-pytest-warnings -r s tests --cov-append
